# tree-sitter-cobol

./: CMakeLists.txt  Makefile  Package.swift  README.md  free_format_basic.cob  free_format_mixed.cbl  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cobol/: __init__.py
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  scanner.c
test/: check_tests.sh
test/corpus/: free_format_1.txt
